--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ emailjs.init("user_Thn5fO2p9p3dSNSQFpaMT");
                       
                       <div class="language">
                             <figure class="language__img--wrapper">
-                                  <img src="./Images/HTML.png" class="language__img" alt="">
+                                  <img src="./Images/html.ico" class="language__img" alt="">
                             </figure>
                             <span class="language__name green">HTML</span>
                       </div>
@@ -132,7 +132,7 @@ emailjs.init("user_Thn5fO2p9p3dSNSQFpaMT");
                       
                       <div class="language">
                             <figure class="language__img--wrapper">
-                                  <img src="./Images/JavaScript.png" class="language__img" alt="">
+                                  <img src="./Images/javascript.ico" class="language__img" alt="">
                             </figure>
                             <span class="language__name green">JavaScript</span>
                       </div>                  
