--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ emailjs.init("user_Thn5fO2p9p3dSNSQFpaMT");
         <h1 class="title">Hi</h1>
         <h1 class="title green">I'm Naomi.</h1>
         <p class="header__para">
-          I'm a <b class="green">Frontend Software Engineer</b> with a strong passion for building web applications with great user experiences.
+          I'm a <b class="green">Software Engineer</b> with a strong passion for building web applications with great user experiences.
           <br>
           Welcome to my 
           <a href="#projects" class=" link__hover-effect
