changed address for library app

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ emailjs.init("user_Thn5fO2p9p3dSNSQFpaMT");
                   My Library app allows  you to browse books, sort all books by rating or price and add them to your cart.
                 </p>
                 <div class="project__description--links">
-                  <a href="https://naomis-library-app.herokuapp.com/" target="_blank"   class="project__description--link">
+                  <a href="https://my-library-app.herokuapp.com/" target="_blank"   class="project__description--link">
                     <i class="fas fa-link"></i>
                   </a>
                 </div>
