--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ emailjs.init("user_Thn5fO2p9p3dSNSQFpaMT");
         ">
             Contact
           </a>
-          <a href="./Images/Naomi Starr CV.pdf" target="_blank" class="
+          <a href="./Images/Naomi_Starr_CV.pdf" target="_blank" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
