linkedIn link updated

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ emailjs.init("user_Thn5fO2p9p3dSNSQFpaMT");
 
         </p>
         <div class="social__list">
-          <a href="https://www.linkedin.com/in/naomi-starr" target="_blank" class="social__link social__link--black click">
+          <a href="www.linkedin.com/in/naomi-starr" target="_blank" class="social__link social__link--black click">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/Naomi-github" target="_blank" class="social__link  social__link--black click">
@@ -230,7 +230,7 @@ emailjs.init("user_Thn5fO2p9p3dSNSQFpaMT");
         ">
             GitHub
           </a>
-          <a href="https://www.linkedin.com/in/naomi-starr" target="_blank" class="
+          <a href="www.linkedin.com/in/naomi-starr" target="_blank" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
