cv link updated

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ emailjs.init("user_Thn5fO2p9p3dSNSQFpaMT");
           <a href="https://github.com/Naomi-github" target="_blank" class="social__link  social__link--black click">
             <i class="fab fa-github"></i>
           </a>
-          <a href="./Images/Naomi Starr.pdf" target="_blank" class="social__link social__link--black click">
+          <a href="./Images/Naomi_Starr_CV.pdf" target="_blank" class="social__link social__link--black click">
             <i class="fas fa-file-pdf"></i>
           </a>
         </div>
